[package]
name = "dongos"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

[dependencies]
bootloader = {version="0.6.0",features = ["map_physical_memory"]}
volatile = "0.2.3"
spin = "0.4.9"
uart_16550 = "0.2.0"
x86_64 = "0.7.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"
linked_list_allocator="0.6.4"
raw-cpuid = "6.1.0"

[[test]]
name = "panic_handler"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "0.0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-dongos.json"
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1